# python-bookeo

./: README.md  build.sh  pyproject.toml  requirements.txt
bookeo/: availability.py  bookings.py  client.py  core.py  customers.py  holds.py  payments.py  request.py  resourceblocks.py  schemas.py  seatblocks.py  settings.py  setup.py  subaccounts.py  webhooks.py
src/bookeo/: client.py  core.py  payments.py  settings.py  subaccounts.py  webhooks.py
tests/: context.py  test_client.py
