[project]
name = "bookeo"
version = "0.1.0"
authors = [{ name = "Nolan Welch", email = "nolanwelch@outlook.com" }]
description = "A Python implementation of the Bookeo v2 API."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Public Domain",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nolanwelch/python-bookeo"
Issues = "https://github.com/nolanwelch/python-bookeo/issues"
